--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Hang.Designer.cs">
       <DependentUpon>Hang.cs</DependentUpon>
     </Compile>
+    <Compile Include="HoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HoaDon.Designer.cs">
+      <DependentUpon>HoaDon.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoaiHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrinhDo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrinhDo.Designer.cs">
+      <DependentUpon>TrinhDo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Hang.resx">
       <DependentUpon>Hang.cs</DependentUpon>
     </EmbeddedResource>
