Xây dựng các chức năng trong form LoaiHang

--- a/QuanLyBanHang/DTO/DTO.csproj
+++ b/QuanLyBanHang/DTO/DTO.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hang.cs" />
+    <Compile Include="Hang_DTO.cs" />
+    <Compile Include="LoaiHang_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
