tạo folder images để chưa icon cho các nút

--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -142,5 +142,19 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\add-file.png" />
+    <Content Include="Images\add.png" />
+    <Content Include="Images\icadd.png" />
+    <Content Include="Images\iccancel.png" />
+    <Content Include="Images\icdelete.png" />
+    <Content Include="Images\icedit.png" />
+    <Content Include="Images\ichome.png" />
+    <Content Include="Images\icreload.png" />
+    <Content Include="Images\icsearch.png" />
+    <Content Include="Images\icuser.png" />
+    <Content Include="Images\logout.png" />
+    <Content Include="Images\null.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
