--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -67,6 +67,18 @@
     <Compile Include="HoaDon.Designer.cs">
       <DependentUpon>HoaDon.cs</DependentUpon>
     </Compile>
+    <Compile Include="KhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KhachHang.Designer.cs">
+      <DependentUpon>KhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LichSuGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LichSuGia.Designer.cs">
+      <DependentUpon>LichSuGia.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoaiHang.cs">
       <SubType>Form</SubType>
     </Compile>
