--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -120,6 +120,12 @@
     <EmbeddedResource Include="Hang.resx">
       <DependentUpon>Hang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="KhachHang.resx">
+      <DependentUpon>KhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LichSuGia.resx">
+      <DependentUpon>LichSuGia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoaiHang.resx">
       <DependentUpon>LoaiHang.cs</DependentUpon>
     </EmbeddedResource>
