--- a/QuanLyBanHang/DTO/DTO.csproj
+++ b/QuanLyBanHang/DTO/DTO.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{16055A91-D46F-4185-9D73-1D7ABDAF5D1D}</ProjectGuid>
+    <ProjectGuid>{E8DBC444-C1B3-468B-8C0D-630732E5FED2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DTO</RootNamespace>
@@ -44,6 +44,7 @@
     <Compile Include="Hang_DTO.cs" />
     <Compile Include="LoaiHang_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrinhDo_DTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
