--- a/QuanLyBanHang/DTO/DTO.csproj
+++ b/QuanLyBanHang/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DangNhap_DTO.cs" />
     <Compile Include="KhachHang_DTO.cs" />
     <Compile Include="LichSuGia_DTO.cs" />
     <Compile Include="NhaCungCap_DTO.cs" />
