--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -37,10 +37,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\BUS\bin\Debug\BUS.dll</HintPath>
     </Reference>
-    <Reference Include="DAL">
+    <Reference Include="DAL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DAL\bin\Debug\DAL.dll</HintPath>
     </Reference>
-    <Reference Include="DTO">
+    <Reference Include="DTO, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DTO\bin\Debug\DTO.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -169,20 +171,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Images\add-file.png" />
-    <Content Include="Images\add.png" />
-    <Content Include="Images\icadd.png" />
-    <Content Include="Images\iccancel.png" />
-    <Content Include="Images\icdelete.png" />
-    <Content Include="Images\icedit.png" />
-    <Content Include="Images\ichome.png" />
-    <Content Include="Images\icreload.png" />
-    <Content Include="Images\icsearch.png" />
-    <Content Include="Images\icuser.png" />
-    <Content Include="Images\logout.png" />
-    <Content Include="Images\null.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
