--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -171,7 +171,6 @@
     <EmbeddedResource Include="TrinhDo.resx">
       <DependentUpon>TrinhDo.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -184,6 +183,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\add.png" />
+    <Content Include="Images\addcart.png" />
+    <Content Include="Images\delete.png" />
+    <Content Include="Images\deletecart.png" />
+    <Content Include="Images\exit.png" />
+    <Content Include="Images\loading.png" />
+    <Content Include="Images\print.png" />
+    <Content Include="Images\printer.png" />
+    <Content Include="Images\printers.png" />
+    <Content Include="Images\refresh.png" />
+    <Content Include="Images\reload.png" />
+    <Content Include="Images\retype.png" />
+    <Content Include="Images\search.png" />
+    <Content Include="Images\search1.png" />
+    <Content Include="Images\upatecart.png" />
+    <Content Include="Images\update.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
