add my data source

--- a/QuanLyBanHang/DAL/app.config
+++ b/QuanLyBanHang/DAL/app.config
@@ -5,5 +5,8 @@
     <connectionStrings>
         <add name="DAL.Properties.Settings.QLBHConnectionString" connectionString="Data Source=DESKTOP-G3PG01C\NHATNGUYEN;Initial Catalog=QLBH;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.QLBHConnectionStringMinh"
+            connectionString="Data Source=DESKTOP-KRH26DK\MINH;Initial Catalog=QLBH;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
