--- a/QuanLyBanHang/GUI/App.config
+++ b/QuanLyBanHang/GUI/App.config
@@ -5,6 +5,8 @@
     <connectionStrings>
         <add name="GUI.Properties.Settings.QLBHConnectionString" connectionString="Data Source=DESKTOP-G3PG01C\NHATNGUYEN;Initial Catalog=QLBH;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="GUI.Properties.Settings.QLBHConnectionString1" connectionString="Data Source=ARINAHASHIMOTO\SQLEXPRESS;Initial Catalog=QLBH;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
