--- a/QuanLyBanHang/DAL/DAL.csproj
+++ b/QuanLyBanHang/DAL/DAL.csproj
@@ -66,6 +66,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QLBHDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="QLBHDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLBHDataSet1.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -91,6 +96,17 @@
     </None>
     <None Include="QLBHDataSet.xss">
       <DependentUpon>QLBHDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLBHDataSet1.xsc">
+      <DependentUpon>QLBHDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="QLBHDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLBHDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLBHDataSet1.xss">
+      <DependentUpon>QLBHDataSet1.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
