--- a/QuanLyBanHang/DAL/app.config
+++ b/QuanLyBanHang/DAL/app.config
@@ -7,5 +7,8 @@
             providerName="System.Data.SqlClient" />
         <add name="DAL.Properties.Settings.QLBHConnectionString1" connectionString="Data Source=ARINAHASHIMOTO\SQLEXPRESS;Initial Catalog=QLBH;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.QLBHConnectionStringMinh"
+            connectionString="Data Source=DESKTOP-KRH26DK\MINH;Initial Catalog=QLBH;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
