Xây dựng view Main  nhạt lại file hóa đơn

--- a/QuanLyBanHang/BUS/BUS.csproj
+++ b/QuanLyBanHang/BUS/BUS.csproj
@@ -56,6 +56,7 @@
     <Compile Include="LichSuGia_BUS.cs" />
     <Compile Include="LoaiHang_BUS.cs" />
     <Compile Include="DangNhap_BUS.cs" />
+    <Compile Include="Main_BUS.cs" />
     <Compile Include="NhaCungCap_BUS.cs" />
     <Compile Include="NhanVien_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
