--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -259,13 +259,16 @@
     </Content>
     <Content Include="Images\add.png" />
     <Content Include="Images\addcart.png" />
+    <Content Include="Images\customer.png" />
     <Content Include="Images\delete.png" />
     <Content Include="Images\deletecart.png" />
+    <Content Include="Images\employee.png" />
     <Content Include="Images\exit.png" />
     <Content Include="Images\loading.png" />
     <Content Include="Images\print.png" />
     <Content Include="Images\printer.png" />
     <Content Include="Images\printers.png" />
+    <Content Include="Images\product.png" />
     <Content Include="Images\refresh.png" />
     <Content Include="Images\reload.png" />
     <Content Include="Images\retype.png" />
