--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -124,6 +124,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaoCaoDoanhSoBanHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BaoCaoDoanhSoBanHang.Designer.cs">
+      <DependentUpon>BaoCaoDoanhSoBanHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="BaoCaoTheoNgay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +222,9 @@
     <Compile Include="TrinhDo.Designer.cs">
       <DependentUpon>TrinhDo.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BaoCaoDoanhSoBanHang.resx">
+      <DependentUpon>BaoCaoDoanhSoBanHang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BaoCaoTheoNgay.resx">
       <DependentUpon>BaoCaoTheoNgay.cs</DependentUpon>
     </EmbeddedResource>
