--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -142,6 +142,12 @@
     <Compile Include="BaoCaoTonCuoiThang.Designer.cs">
       <DependentUpon>BaoCaoTonCuoiThang.cs</DependentUpon>
     </Compile>
+    <Compile Include="DangKy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DangKy.Designer.cs">
+      <DependentUpon>DangKy.cs</DependentUpon>
+    </Compile>
     <Compile Include="DangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +171,12 @@
     </Compile>
     <Compile Include="KhachHang.Designer.cs">
       <DependentUpon>KhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LayMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LayMatKhau.Designer.cs">
+      <DependentUpon>LayMatKhau.cs</DependentUpon>
     </Compile>
     <Compile Include="LichSuGia.cs">
       <SubType>Form</SubType>
@@ -231,6 +243,9 @@
     <EmbeddedResource Include="BaoCaoTonCuoiThang.resx">
       <DependentUpon>BaoCaoTonCuoiThang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DangKy.resx">
+      <DependentUpon>DangKy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
@@ -239,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HoaDon.resx">
       <DependentUpon>HoaDon.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LayMatKhau.resx">
+      <DependentUpon>LayMatKhau.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ReportBaoCaoTheoNgay.rdlc" />
     <EmbeddedResource Include="ReportBaoCaoTheoNgay.resx">
