--- a/QuanLyBanHang/GUI/GUI.csproj
+++ b/QuanLyBanHang/GUI/GUI.csproj
@@ -210,11 +210,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QLBH_DataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QLBH_DataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="ReportBaoCaoTheoNgay.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +221,12 @@
     </Compile>
     <Compile Include="ReportBaoCaoTheoThang.Designer.cs">
       <DependentUpon>ReportBaoCaoTheoThang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportHoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportHoaDon.Designer.cs">
+      <DependentUpon>ReportHoaDon.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="TrinhDo.cs">
@@ -258,6 +259,7 @@
     <EmbeddedResource Include="LayMatKhau.resx">
       <DependentUpon>LayMatKhau.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportHoaDon.rdlc" />
     <EmbeddedResource Include="ReportBaoCaoTheoNgay.rdlc" />
     <EmbeddedResource Include="ReportBaoCaoTheoNgay.resx">
       <DependentUpon>ReportBaoCaoTheoNgay.cs</DependentUpon>
@@ -293,6 +295,9 @@
     <EmbeddedResource Include="ReportBaoCaoTheoThang.resx">
       <DependentUpon>ReportBaoCaoTheoThang.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportHoaDon.resx">
+      <DependentUpon>ReportHoaDon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TrinhDo.resx">
       <DependentUpon>TrinhDo.cs</DependentUpon>
     </EmbeddedResource>
@@ -322,17 +327,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="QLBH_DataSet.xsc">
-      <DependentUpon>QLBH_DataSet.xsd</DependentUpon>
-    </None>
-    <None Include="QLBH_DataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>QLBH_DataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="QLBH_DataSet.xss">
-      <DependentUpon>QLBH_DataSet.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
