--- a/QuanLyBanHang/DAL/app.config
+++ b/QuanLyBanHang/DAL/app.config
@@ -7,5 +7,7 @@
             providerName="System.Data.SqlClient" />
         <add name="DAL.Properties.Settings.QLBHConnectionString1" connectionString="Data Source=ARINAHASHIMOTO\SQLEXPRESS;Initial Catalog=QLBH;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.QLBHConnectionString2" connectionString="Data Source=LONGLD\LLD;Initial Catalog=QLBH;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
